log
Wed 10 May 2023 03:11:16 PM UTC: 
 tests:  0|4
total_score: 0/70
8b3801c
Wed 10 May 2023 03:16:16 PM UTC: 
 heap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
fa50d62
Wed 10 May 2023 03:16:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bed6c8f
Wed 10 May 2023 03:17:57 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ec91d01
Wed 10 May 2023 03:18:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f5293c4
Wed 10 May 2023 03:20:00 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   23 |   if (!h || !h -> heapArray) free(h); return NULL;
      |   ^~
heap.c:23:39: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   23 |   if (!h || !h -> heapArray) free(h); return NULL;
      |                                       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b49554b
Wed 10 May 2023 03:20:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:37: error: expected ‘;’ before ‘return’
   23 |   if (!h || !h -> heapArray) free(h) return NULL;
      |                                     ^~~~~~~
      |                                     ;
Compilation failed
dc3af9a
Wed 10 May 2023 03:20:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   23 |   if (!h || !h -> heapArray) free(h) ;return NULL;
      |   ^~
heap.c:23:39: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   23 |   if (!h || !h -> heapArray) free(h) ;return NULL;
      |                                       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
59a83b0
Wed 10 May 2023 03:21:02 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
816f7f9
Wed 10 May 2023 03:21:26 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b3d4056
Wed 10 May 2023 03:24:02 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
360a3a2
